[project]
name = "DQN_From_Scratch_Atari"
version = "0.1.0"
description = "Implementation of DQN for Atari"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ale-py>=0.11.1",
    "gymnasium[atari]>=1.1.1",
    "ipykernel>=6.29.5",
    "numpy>=2.3.0",
    "opencv-python>=4.11.0.86",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
]


[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchaudio = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
  { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
